--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,14 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">jeff</h2>
+        <h2 class="card-title">Jeff Flynn</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:jeffreyedwardflynn@gmail.com">jeffreyedwardflynn@gmail.com</a></li>
+            <li class="list-group-item">Office number: 6788982275</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Jill Flynn</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 48</li>
-            <li class="list-group-item">Email: <a href="mailto:jeff@gmail.com">jeff@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/84jed" target="_blank" rel="noopener noreferrer">84jed</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:jillflynn07@gmail.com">jillflynn07@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/7J647" target="_blank" rel="noopener noreferrer">7J647</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Jessica Flynn</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:jessicaflynn61@gmail.com">jessicaflynn61@gmail.com</a></li>
+            <li class="list-group-item">School: Ole Miss</li>
         </ul>
     </div>
 </div>
