added CSS styling to team.html

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 bg-primary text-white team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -26,24 +26,24 @@
                 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">Jeff Flynn</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"style="color:black"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item"style="color:red">ID: 1</li>
             <li class="list-group-item">Email: <a href="mailto:jeffreyedwardflynn@gmail.com">jeffreyedwardflynn@gmail.com</a></li>
-            <li class="list-group-item">Office number: 6788982275</li>
+            <li class="list-group-item">Office number: 1-678-898-2275</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">Jill Flynn</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"style="color:black"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item"style="color:red">ID: 2</li>
             <li class="list-group-item">Email: <a href="mailto:jillflynn07@gmail.com">jillflynn07@gmail.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/7J647" target="_blank" rel="noopener noreferrer">7J647</a></li>
         </ul>
@@ -52,11 +52,11 @@
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">Jessica Flynn</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"style="color:black"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item"style="color:red">ID: 3</li>
             <li class="list-group-item">Email: <a href="mailto:jessicaflynn61@gmail.com">jessicaflynn61@gmail.com</a></li>
             <li class="list-group-item">School: Ole Miss</li>
         </ul>
